--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "@angular/platform-browser": "~9.1.3",
     "@angular/platform-browser-dynamic": "~9.1.3",
     "@angular/router": "~9.1.3",
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.10",
+    "mongoose-unique-validator": "^2.0.3",
     "nodemon": "^2.0.7",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
